--- a/www/package.json
+++ b/www/package.json
@@ -6,6 +6,7 @@
     "@emotion/styled": "^10.0.10",
     "@material-ui/system": "^3.0.0-alpha.2",
     "@zeit/next-typescript": "^1.1.1",
+    "emotion-theming": "^10.0.10",
     "isomorphic-unfetch": "^3.0.0",
     "next": "^8.0.4",
     "react": "^16.8.6",
