--- a/www/package.json
+++ b/www/package.json
@@ -10,7 +10,8 @@
     "isomorphic-unfetch": "^3.0.0",
     "next": "^8.0.4",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-firebase-hooks": "^1.2.0-rc.1"
   },
   "scripts": {
     "build": "next build",
