--- a/api/php/lib/composer.json
+++ b/api/php/lib/composer.json
@@ -9,6 +9,7 @@
         }
     ],
     "require": {
-        "sendgrid/sendgrid": "^7.2"
+        "sendgrid/sendgrid": "^7.2",
+        "ktamas77/firebase-php": "^2.2"
     }
 }
