--- a/now.json
+++ b/now.json
@@ -29,6 +29,9 @@
     }
   ],
   "env": {
-    "sendgrid_api_key": "@sendgrid_api_key"
+    "sendgrid_api_key": "@sendgrid_api_key",
+    "firebase_default_url": "@firebase_default_url",
+    "firebase_default_path": "@firebase_default_path",
+    "firebase_default_token": "@firebase_default_token"
   }
 }
