--- a/www/package.json
+++ b/www/package.json
@@ -5,13 +5,12 @@
     "@emotion/core": "^10.0.10",
     "@emotion/styled": "^10.0.10",
     "@material-ui/system": "^3.0.0-alpha.2",
-    "@zeit/next-typescript": "^1.1.1",
     "emotion-theming": "^10.0.10",
     "isomorphic-unfetch": "^3.0.0",
-    "next": "^8.0.4",
+    "next": "^8.1.1-canary.28",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-firebase-hooks": "^1.2.0-rc.1"
+    "react-firebase-hooks": "^1.2.1"
   },
   "scripts": {
     "build": "next build",
@@ -21,9 +20,9 @@
     "type-check": "tsc"
   },
   "devDependencies": {
-    "@types/next": "^8.0.3",
-    "@types/react": "^16.8.13",
-    "@types/react-dom": "^16.8.4",
+    "@types/node": "^11.13.9",
+    "@types/react": "^16.8.15",
+    "@types/react-dom": "^16.0.11",
     "babel-plugin-emotion": "^10.0.9",
     "typescript": "^3.4.3"
   }
