--- a/now.json
+++ b/now.json
@@ -31,6 +31,6 @@
   "env": {
     "sendgrid_api_key": "@sendgrid_api_key",
     "airtable_api_key": "@airtable_api_key",
-    "airtable_base_id": "@airtable_base_id",
+    "airtable_base_id": "@airtable_base_id"
   }
 }
