--- a/www/package.json
+++ b/www/package.json
@@ -4,13 +4,14 @@
   "dependencies": {
     "@emotion/core": "^10.0.10",
     "@emotion/styled": "^10.0.10",
-    "@material-ui/core": "^4.0.0",
+    "@material-ui/core": "latest",
+    "@material-ui/styles": "latest",
     "@material-ui/system": "^3.0.0-alpha.2",
     "emotion-theming": "^10.0.10",
     "firebase": "^6.0.4",
     "isomorphic-unfetch": "^3.0.0",
     "next": "^8.1.1-canary.28",
-    "next-mui-helper": "1.2.0",
+    "next-mui-helper": "^2.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-firebase-hooks": "^1.2.1"
