--- a/www/package.json
+++ b/www/package.json
@@ -4,14 +4,13 @@
   "dependencies": {
     "@emotion/core": "^10.0.10",
     "@emotion/styled": "^10.0.10",
-    "@material-ui/core": "latest",
-    "@material-ui/styles": "latest",
-    "@fortawesome/fontawesome-free": "~5.8.2",
-    "@material-ui/system": "^3.0.0-alpha.2",
+    "@material-ui/core": "^4.0.0",
+    "@material-ui/icons": "^4.0.0",
+    "@material-ui/styles": "^4.0.0",
     "emotion-theming": "^10.0.10",
     "firebase": "^6.0.4",
     "isomorphic-unfetch": "^3.0.0",
-    "next": "^8.1.1-canary.28",
+    "next": "^8.1.0",
     "next-mui-helper": "^2.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
