--- a/www/package.json
+++ b/www/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@emotion/core": "^10.0.10",
     "@emotion/styled": "^10.0.10",
+    "@fortawesome/fontawesome-free": "^5.8.2",
     "@material-ui/core": "^4.0.0",
     "@material-ui/icons": "^4.0.0",
     "@material-ui/styles": "^4.0.0",
