--- a/www/package.json
+++ b/www/package.json
@@ -29,6 +29,7 @@
     "@types/react": "^16.8.15",
     "@types/react-dom": "^16.0.11",
     "babel-plugin-emotion": "^10.0.9",
+    "nanoid": "^2.0.3",
     "typescript": "^3.4.3"
   }
 }
