--- a/www/package.json
+++ b/www/package.json
@@ -5,9 +5,9 @@
     "@emotion/core": "^10.0.10",
     "@emotion/styled": "^10.0.10",
     "@fortawesome/fontawesome-free": "^5.8.2",
-    "@material-ui/core": "^4.0.0",
+    "@material-ui/core": "^4.0.0-rc.0",
     "@material-ui/icons": "^4.0.0",
-    "@material-ui/styles": "^4.0.0",
+    "@material-ui/styles": "^4.0.0-rc.0",
     "emotion-theming": "^10.0.10",
     "firebase": "^6.0.4",
     "isomorphic-unfetch": "^3.0.0",
