--- a/now.json
+++ b/now.json
@@ -10,7 +10,7 @@
       "src": "api/php/*.php",
       "use": "@now/php",
       "config": {
-        "includeFiles": ["api/php/lib/**/*.php"]
+        "includeFiles": ["api/php/lib/**/*.php", "api/php/lib/vendor/**/*.*"]
       }
     },
     {
